--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -5,7 +5,7 @@ manifests:
     - ./infra/k8s/*
 build:
   local:
-    push: false
+    push: true
   artifacts:
     - image: mikuadam/client
       context: client
